--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.15.2",
     "ejs": "^2.5.7",
     "express": "^4.16.1",
+    "file-system": "^2.2.2",
     "multer": "^1.2.0"
   },
   "devDependencies": {},
