snap: make node app a command and change source to use local files since it's not auto deployed

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "EventBot is a local web app to hosts your pictures.",
   "main": "eventbot.js",
+  "bin": {
+    "eventbot": "eventbot.js"
+  },
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.16.1",
