--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "EventBot is a local web app to hosts your pictures.",
   "main": "eventbot.js",
-  "bin": {
-    "eventbot": "eventbot.js"
-  },
+  "bin": "eventbot.js",
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.16.1",
+    "file-system": "^2.2.2",
     "multer": "^1.2.0"
   },
   "devDependencies": {},
