--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.16.1",
     "file-system": "^2.2.2",
     "jpeg-autorotate": "^3.0.1",
-    "multer": "^1.2.0"
+    "multer": "^1.2.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "scripts": {
