--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "ejs": "^2.5.7",
+    "exif": "^0.6.0",
     "express": "^4.16.1",
     "file-system": "^2.2.2",
-    "jpeg-autorotate": "^3.0.1",
     "multer": "^1.2.0",
     "path": "^0.12.7"
   },
